@@ -34,29 +34,32 @@ public class LambkitResult {
         this.message = message;
         this.data = data;
     }
-
+    
     public int getCode() {
         return code;
     }
 
-    public void setCode(int code) {
+    public LambkitResult setCode(int code) {
         this.code = code;
+        return this;
     }
 
     public String getMessage() {
         return message;
     }
 
-    public void setMessage(String message) {
+    public LambkitResult setMessage(String message) {
         this.message = message;
+        return this;
     }
 
     public Object getData() {
         return data;
     }
 
-    public void setData(Object data) {
+    public LambkitResult setData(Object data) {
         this.data = data;
+        return this;
     }
 
 }
