@@ -8,22 +8,23 @@ package com.lambkit.core.api.route;
 public class ApiException extends Exception {
 	private static final long serialVersionUID = 1L;
 	
-	private String code;
+	private int code;
 
 	public ApiException(String message) {
 		super(message);
+		this.code = 400;
 	}
 
-	public ApiException(String code, String message) {
+	public ApiException(int code, String message) {
 		super(message);
 		this.code = code;
 	}
 
-	public String getCode() {
+	public int getCode() {
 		return code;
 	}
 
-	public void setCode(String code) {
+	public void setCode(int code) {
 		this.code = code;
 	}
 }
